# ragflow-poc

.claude/: settings.local.json
docker/: .env  CLAUDE.md  LOCAL_DEVELOPMENT_SETUP.md  PYCHARM_QUICK_SETUP.md  PYCHARM_SETUP.md  docker-compose-base.yml  docker-compose-gpu.yml  docker-compose.yml  mcp-config.json  service_conf.yaml.template  setup_complete.sh  setup_local_dev.sh  setup_ollama.sh
docker/.claude/: settings.local.json
docker/dev-container/: Dockerfile  README_PYCHARM.md  pyproject.toml
docker/volumes/: .gitignore
