[project]
name = "ragflow-dev"
version = "0.2.0"
description = "RAGFlow Development Environment with Data Science Tools"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiofiles",
    "aiohttp",
    "aiosignal",
    "aiosqlite",
    "alembic",
    "anthropic>=0.49.0",
    "anyio",
    "argon2-cffi>=23.1.0",
    "arrow",
    "asyncio",
    "asyncpg>=0.29.0",
    "attrs",
    "babel",
    "backcall",
    "beautifulsoup4",
    "black>=24.4.2",
    "bleach",
    "blosc2",
    "boto3>=1.34.82",
    "botocore",
    "bottleneck",
    "cachelib",
    "ccxt>=4.4.73",
    "certifi",
    "cffi",
    "click",
    "cloudpickle",
    "colorlog",
    "contourpy",
    "cryptography>=42.0.5",
    "cycler",
    "cysimdjson",
    "cython",
    "dask",
    "dateparser",
    "debugpy",
    "decorator",
    "defusedxml",
    "dill",
    "distlib",
    "distributed",
    "email-validator>=2.1.1",
    "enum-tools",
    "exchange-calendars",
    "fastapi>=0.115.12",
    "fastjsonschema",
    "fastparquet",
    "fqdn",
    "fsspec",
    "future",
    "geoip2>=4.8.0",
    "gitdb",
    "graphviz",
    "greenlet>=3.0.3",
    "gunicorn",
    "h5py",
    "html5lib",
    "httpcore",
    "httpx>=0.27.0",
    "idna",
    "importlib-metadata",
    "importlib-resources",
    "in-place",
    "ipykernel",
    "ipylab",
    "ipympl",
    "ipython",
    "ipython-genutils",
    "ipython-suggestions",
    "ipywidgets",
    "isoduration",
    "isort>=5.12.0",
    "jedi",
    "jinja2",
    "jlab-enhanced-launcher",
    "joblib",
    "json-lsp",
    "json5",
    "jsonschema",
    "jupyterlab",
    "jupyterlab-git",
    "jupyterlab-github",
    "jupyterlab-lsp",
    "kaleido<=0.2.1",
    "kiwisolver",
    "lolviz",
    "lxml",
    "mako",
    "markdown",
    "markupsafe",
    "matplotlib",
    "matplotlib-inline",
    "mistune",
    "msgpack",
    "multitasking",
    "nbclient",
    "nbconvert",
    "nbdime",
    "nbformat",
    "nest-asyncio",
    "notebook",
    "notebook-shim",
    "numba",
    "numexpr",
    "numpy>=2.2.4",
    "okx>=2.1.1",
    "openpyxl",
    "orjson",
    "pandas==2.2.2",
    "pandoc",
    "pandocfilters",
    "parallel-ssh",
    "passlib[bcrypt]>=1.7.4",
    "pathlib2",
    "peewee>=3.17.5",
    "pendulum",
    "pexpect",
    "pgpubsub>=0.0.5",
    "phonenumbers>=8.13.34",
    "pip",
    "plotly",
    "pre-commit>=3.7.1",
    "prettytable",
    "protobuf",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "ptyprocess",
    "public-ip>=0.12",
    "pure-eval",
    "pyarrow",
    "pybit>=5.10.0",
    "pycparser",
    "pydantic[email]>=2.6.4",
    "pyfiglet",
    "pygeoip>=0.3.2",
    "pygments",
    "pyjwt>=2.8.0",
    "pylint>=3.3.3",
    "pymysql",
    "pyotp>=2.9.0",
    "pyparsing",
    "pypng>=0.20220715.0",
    "pyqrcode>=1.2.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.6",
    "pytest-mock>=3.14.0",
    "pytest-tornasync>=0.6.0.post2",
    "python-dateutil",
    "python-dotenv>=1.0.1",
    "python-lsp-black",
    "python-lsp-isort",
    "python-lsp-server[all]",
    "python-okx>=0.2.8",
    "python-telegram-bot>=22.0",
    "pytz",
    "pyyaml",
    "pyzmq",
    "redis[asyncio]>=5.1.1",
    "requests>=2.31.0",
    "rich",
    "s3fs",
    "scikit-learn",
    "scipy>=1.13.0",
    "setproctitle>=1.3.5",
    "setuptools",
    "six",
    "sniffio",
    "sortedcontainers",
    "sqlalchemy>=2.0.28",
    "statsmodels",
    "tables",
    "tabulate",
    "tblib",
    "tenacity",
    "threadpoolctl",
    "tornado",
    "tqdm",
    "typing-extensions",
    "tzdata",
    "ujson",
    "uri-template",
    "urllib3",
    "uvicorn>=0.34.0",
    "watchfiles>=1.0.4",
    "wcwidth",
    "webencodings",
    "websocket-client",
    "websockets>=15.0.1",
    "widgetsnbextension",
    "xlrd",
    "xlsxwriter",
    "y-py",
    "yfinance>=0.2.63",
    "ypy-websocket",
    "zipp",
    # RAGFlow SDK for API integration
    "ragflow-sdk",
    # Additional data science essentials
    "seaborn",
    "polars",
    "pyodbc",
]

[tool.uv.pip]
python-platform = "linux"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pylint.main]
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]  # Missing docstrings